<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imgProfilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/gui"
        android:layout_gravity="center"
        android:layout_margin="20dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nameUser"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="25dp"
        android:background="@drawable/border_scroll">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_aboutMe"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="10dp">
        </TextView>

    </ScrollView>

    <Button
        android:id="@+id/btnProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_projects"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp">
    </Button>

    <Button
        android:id="@+id/btnContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contact"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp">
    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_margin="20dp">
    </View>

</LinearLayout>
