<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Projects">

    <Toolbar
        android:id="@+id/toolbarProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:title="@string/title_toolbar_projects"
        android:navigationIcon="@drawable/ic_back"
        android:titleTextColor="@color/white"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent">
    </Toolbar>

    <ImageView
        android:id="@+id/imgProject1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/gpa"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarProjects"
        app:layout_constraintStart_toStartOf="parent"
        >
    </ImageView>

    <TextView
        android:id="@+id/txtProject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_gpa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarProjects"
        app:layout_constraintStart_toEndOf="@id/imgProject1"
        >
    </TextView>

    <Button
        android:id="@+id/btnProject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/txt_button_personal_projects"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgProject1"
        app:layout_constraintTop_toBottomOf="@id/txtProject1">

    </Button>

    <ImageView
        android:id="@+id/imgProject2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/passwordgenerator"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgProject1"
        app:layout_constraintStart_toStartOf="parent"
        >
    </ImageView>

    <TextView
        android:id="@+id/txtProject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnProject1"
        app:layout_constraintStart_toEndOf="@id/imgProject1"
        >
    </TextView>

    <Button
        android:id="@+id/btnProject2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/txt_button_personal_projects"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imgProject2"
        app:layout_constraintTop_toBottomOf="@id/txtProject2">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>